force-app/main/default/objects/CustomerCognitionSettings__c/CustomerCognitionSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cognition Settings</label>
</CustomObject>