force-app/main/default/objects/CustomerCognitionSettings__c/fields/AutoRefresh__c.field-meta.xml
<CustomField>
    <fullName>AutoRefresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then Cognition Page will be refreshed automatically at regular intervals</description>
    <inlineHelpText>If true, then Cognition Page will be refreshed automatically at regular intervals</inlineHelpText>
    <label>AutoRefresh</label>
    <type>Checkbox</type>
</CustomField>