force-app/main/default/objects/CustomerCognitionSettings__c/fields/MaxPilotAccountsforInternal__c.field-meta.xml
<CustomField>
    <fullName>MaxPilotAccountsforInternal__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of Pilot Account entries retrieved for an Internal User</description>
    <inlineHelpText>Maximum number of Pilot Account  entries retrieved for an Internal User</inlineHelpText>
    <label>Max PilotAccounts for Internal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>