force-app/main/default/objects/CustomerCognitionSettings__c/fields/RefreshInterval__c.field-meta.xml
<CustomField>
    <fullName>RefreshInterval__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Refresh Interval in Minutes</description>
    <inlineHelpText>Refresh Interval in Minutes. Default is 5.</inlineHelpText>
    <label>Refresh Interval Minutes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>